--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="C:\Users\dhair\Desktop\Web Development\HTML- Personal Website\circle-cropped.png" alt="Dhairya Profile pic" width="200" height="200">
+      <td><a href="https://imgur.com/FL71S8o"><img src="https://i.imgur.com/FL71S8o.png" title="source: imgur.com" /></a>
       </td>
       <td>
         <h1>Dhairya Shah</h1>
